Bug 364224 - Next song in playback list not played
Summary: Next song in playback list not played
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-11 19:11 UTC by eldrad.ulthran
Modified: 2016-06-14 01:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eldrad.ulthran 2016-06-11 19:11:49 UTC
I am using a self compiled 2.0.3. on OpenSuse 13.2.
If I drag some music files from the file manager into the temporary playback list and let kaffeine play them, only the very first song is played, kaffeine doesn't proceed with the next one in the list. I tested it with mp3 and flac files.
It seems as if kaffeine had a problem within the last second: If the song has a length of e.g. 00:01:08.394, the button on the progress bar (at the bottom) stops some pixels in front of its end, showing 00:01:08.

Reproducible: Always
Comment 1 Mauro Carvalho Chehab 2016-06-14 01:09:44 UTC
Git commit 3be092852be28c705dafe3d532bb92b395f12359 by Mauro Carvalho Chehab.
Committed on 14/06/2016 at 01:09.
Pushed by mauroc into branch 'master'.

mediawidget: Go to the next URL on a playlist at the end of a play

The logic of automatically go to the next item on a playlist is
currently broken.

When VLC detects the end of a media play, it emits a signal
(libvlc_MediaPlayerEndReached), with is returned to the media widget
as a playbackFinished signal. Such signal should cause a call to
PlaylistTab::playNextTrack() for its logic to play the next file.

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>

M  +3    -0    src/mediawidget.cpp

http://commits.kde.org/kaffeine/3be092852be28c705dafe3d532bb92b395f12359